--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
   </head>
   <body>
     <h1>Hello from Aditi, this is my custom Docker image!</h1>
+    <h1>
+      If I can see this, it means Elastic Beanstalk has deployed an image with
+      my work.
+    </h1>
   </body>
 </html>
